Second commit with improvements.